--- a/src/client/app/shared/navbar/navbar.component.html
+++ b/src/client/app/shared/navbar/navbar.component.html
@@ -2,4 +2,5 @@
   <a [routerLink]="['/']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">HOME</a>
   <a [routerLink]="['/about']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">ABOUT</a>
   <a [routerLink]="['/apiroad']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">APIROAD</a>
+  <a [routerLink]="['/resolving']" [routerLinkActive]="['router-link-active']" [routerLinkActiveOptions]="{exact:true}">RESOLVING</a>
 </nav>
